# mispdlog

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh
include/mispdlog/: common.h  formatter.h  level.h  logger.h  mispdlog.h  pattern_formatter.h  registry.h
include/mispdlog/details/: log_message.h  utils.h
include/mispdlog/sinks/: base_sink.h  color_console_sink.h  console_sink.h  file_sink.h  rotating_file_sink.h
src/: CMakeLists.txt  formatter.cpp  level.cpp  logger.cpp  pattern_formatter.cpp  registry.cpp
src/details/: utils.cpp
src/sinks/: rotating_file_sink.cpp
test/: CMakeLists.txt  basic_logger_test.cpp  formatter_test.cpp  level_test.cpp  registry_test.cpp  rotating_logger_test.cpp
tests/: CMakeLists.txt  base_sink_test.cpp  formatter_test.cpp  level_test.cpp
